fix: decrease z-index of reply card

--- a/src/components/reply-card/styles.scss
+++ b/src/components/reply-card/styles.scss
@@ -7,7 +7,7 @@
 
 .reply-card {
   position: relative;
-  z-index: 10;
+  z-index: 9;
   margin-bottom: 8px;
   &__container {
     display: flex;
